# grasp_visualizer

./: CMakeLists.txt  README.md
example_files/: robotiq.ply
src/: grasp_visualizer.cpp
